--- a/apuntes.html
+++ b/apuntes.html
@@ -165,7 +165,14 @@
             </div>
 
           </div>
-         
+         <div class="media d-block feature text-center">
+              <div class="media-body">
+                <h3 class="mt-0">Práctica Numérico</h3>
+                <p class="instructor-meta">Ejercicios propuestos</p>
+                <a href="./tareas/practica-1.pdf">Ver</a>
+              </div>
+            </div>
+          </div>
 
         </section>
 
