--- a/apuntes.html
+++ b/apuntes.html
@@ -151,9 +151,9 @@
               <div class="media-body">
                 <h3 class="mt-0">Sin clasificar</h3>
                 <p class="instructor-meta">Códigos hechos en clases</p>
-                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/2.6.c">2.6 Ver</a>
-                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/3.1.c">3.1 Ver</a>
-                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/3.2.c">3.2 Ver</a>
+                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/2.6.c">2.6 Ver</a><br>
+                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/3.1.c">3.1 Ver</a><br>
+                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/3.2.c">3.2 Ver</a><br>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/3.3.c">3.3 Ver</a>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/3.4.c">3.4 Ver</a>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/4.1.c">4.1 Ver</a>
@@ -163,9 +163,7 @@
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/5.2.c">5.2 Ver</a>
               </div>
             </div>
-
-          </div>
-         <div class="media d-block feature text-center">
+             <div class="media d-block feature text-center">
               <div class="media-body">
                 <h3 class="mt-0">Práctica Numérico</h3>
                 <p class="instructor-meta">Ejercicios propuestos</p>
@@ -173,6 +171,9 @@
               </div>
             </div>
           </div>
+
+          </div>
+        
 
         </section>
 
