--- a/apuntes.html
+++ b/apuntes.html
@@ -163,7 +163,14 @@
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/5.2.c">5.2 Ver</a>
               </div>
             </div>
-
+             <div class="media d-block feature text-center">
+              <div class="media-body">
+                <h3 class="mt-0">Práctica Numérico</h3>
+                <p class="instructor-meta">Ejercicios propuestos</p>
+                <a href="./tareas/practica-1.pdf">Ver</a>
+              </div>
+            </div>
+          </div>
           </div>
          
 
