--- a/videos.html
+++ b/videos.html
@@ -96,7 +96,7 @@
             </a>
           </div>
           <div class="col-lg-2 col-md-4 col-sm-6 col-12">
-            <a href="./video/cmd.mp4" class="course" target="_blank">
+            <a href="./video/mcd.mp4" class="course" target="_blank">
               <img src="images/windows.jpg" alt="Image placeholder">
               <h2>Máximo común divisor</h2>
               <p>Ejercicion 2</p>
