--- a/proyecto.html
+++ b/proyecto.html
@@ -380,9 +380,9 @@ plazo de la entrega es el lunes 29 de abril a las 8:00 am.<br><br>
 Suerte!!.   
    </p>
 <div class="center-align"> 
-<a class="waves-effect waves-light btn" href="tareass/1er-proyecto.pdf"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
+<a class="waves-effect waves-light btn" href="tareass/1er-proyecto.pdf" target="_blank"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
 <a class="waves-effect waves-light btn" href="registro-img.html"><i class="material-icons left">work</i>Subir Tarea</a>
-<a class="waves-effect waves-light btn" href="video/explicacion"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
+<a class="waves-effect waves-light btn" href="video/explicacion.mp4" target="_blank"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
         </div> 
     </section>
    <!--Lista de precios-->
