--- a/proyecto.html
+++ b/proyecto.html
@@ -406,22 +406,15 @@ Suerte!!.
         <div class="container">
           <div class="row">
             <div class="col l6 s12">
-              <h5 class="white-text">Lawnp 2019</h5>
-              <p class="grey-text text-lighten-4">LAWNP have as target to create a motivating environment, such that researchers from Latin America and from other parts of the world can present and discuss not only their own latest results but also the trends and perspectives in this very interdisciplinary field of investigation.</p>
+              <h5 class="white-text">Página del Proyecto</h5>
+              <p class="grey-text text-lighten-4">Está página esta destinada a los proyectos que se harán en la materia de Cálculo Numérico y Programación, la página tiene un tiempo de vida en lo que dure el proyecto por lo que está página despues del tiempo establecido desaparecerá automáticamente.</p>
             </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Address</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!"><i class="fas fa-map-marked-alt"></i> Carrera de Física, Campus universitario, calle 27, Cota cota- La Paz</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!"><i class="fas fa-phone"></i> (+591-2) 2612801</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!"><i class="far fa-envelope"></i> lawnp2019@fiumsa.edu.bo</a></li>
-              </ul>
-            </div>
+            
           </div>
         </div>
         <div class="footer-copyright">
           <div class="container">
-          © 2019, All rights reserved - |Grupo de Sistemas Complejos Bolivia|. 
+          © 2019, All rights reserved - |FIS-243|. 
           <a class="grey-text text-lighten-4 right" href="http://www.fiumsa.edu.bo"><i class="fas fa-university"></i> Carrera de Física</a> <br>
           <a class="grey-text text-lighten-4 right" href="http://www.fiumsa.edu.bo/iif/gsc/home.html"><i class="far fa-object-group"></i> Grupo Complejo UMSA, </a>
           </div>
