--- a/proyecto.html
+++ b/proyecto.html
@@ -381,7 +381,7 @@ Suerte!!.
    </p>
 <div class="center-align"> 
 <a class="waves-effect waves-light btn" href="tareas/1er-proyecto.pdf" target="_blank"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
-<a class="waves-effect waves-light btn" href="registro-img.html"><i class="material-icons left">work</i>Subir Tarea</a>
+<a class="waves-effect waves-light btn" href="https://fis243.000webhostapp.com/subir-programa/subir-programa/subir-proyecto.html"><i class="material-icons left">work</i>Subir Tarea</a>
 <a class="waves-effect waves-light btn" href="video/explicacion.mp4" target="_blank"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
         </div> 
     </section>
