--- a/apuntes.html
+++ b/apuntes.html
@@ -238,21 +238,21 @@
             <div class="media d-block feature text-center">
               <div class="media-body">
                 <h3 class="mt-0">Bisección (Raíces)</h3>
-                <p class="instructor-meta">Código, Dr. Rivera</p>
+                <p class="instructor-meta">Código hecho en clases</p>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/bisection.c">Ver</a>
               </div>
             </div>
             <div class="media d-block feature text-center">
               <div class="media-body">
                 <h3 class="mt-0">Newton (Raíces)</h3>
-                <p class="instructor-meta">Código, Dr. Rivera</p>
+                <p class="instructor-meta">Código hecho en clases</p>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/newton.c">Ver</a>
               </div>
             </div>
             <div class="media d-block feature text-center">
               <div class="media-body">
                 <h3 class="mt-0">Regla Falsa</h3>
-                <p class="instructor-meta">Código, Dr. Rivera</p>
+                <p class="instructor-meta">Código hecho en clases</p>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/regulafalsi.c">Ver</a>
               </div>
             </div>
@@ -266,14 +266,21 @@
             <div class="media d-block feature text-center">
               <div class="media-body">
                 <h3 class="mt-0">Regla falsa modificada</h3>
-                <p class="instructor-meta">Código, Dr. Rivera</p>
+                <p class="instructor-meta">Código hecho en clases</p>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/regulafalsimod.c">Ver</a>
               </div>
             </div>
             <div class="media d-block feature text-center">
               <div class="media-body">
+                <h3 class="mt-0">LinSolve.c</h3>
+                <p class="instructor-meta">Código hecho en clases</p>
+                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/linsolve.c">Ver</a>
+              </div>
+            </div>
+            <div class="media d-block feature text-center">
+              <div class="media-body">
                 <h3 class="mt-0">Solución del 1er Proyecto</h3>
-                <p class="instructor-meta">Código, Dr. Rivera</p>
+                <p class="instructor-meta">Código hecho en clases</p>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/gcdmat.c">Ver</a>
               </div>
             </div>
