--- a/apuntes.html
+++ b/apuntes.html
@@ -55,6 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="proyecto.html">Proyecto</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="notas.html">Notas</a>
+              </li>
             </ul>            
           </div>
         </div>
