--- a/notas.html
+++ b/notas.html
@@ -205,12 +205,12 @@
             <td>43%</td>
           </tr>
            <tr>
-            <td>Fabricio Echelar</td>
+            <td>Fabricio Echalar</td>
              <td><i class="bad fas fa-times-circle"></i></td>
              <td><i class="bad fas fa-times-circle"></i></td>
-             <td><i class="bad fas fa-times-circle"></i></td>
-             <td><i class="bad fas fa-times-circle"></i></td>
-            <td>0%</td>
+             <td><i class="half fas fa-star-half"></i></td>
+             <td><i class="good fas fa-check"></i></td>
+            <td>40%</td>
           </tr>
            <tr>
             <td>Mauricio Calderón</td>
