--- a/apuntes.html
+++ b/apuntes.html
@@ -275,9 +275,16 @@
             </div>
             <div class="media d-block feature text-center">
               <div class="media-body">
-                <h3 class="mt-0">LinSolve.c</h3>
+                <h3 class="mt-0">Sistema de Ecuaciones</h3>
                 <p class="instructor-meta">Código hecho en clases</p>
                 <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/linsolve.c">Ver</a>
+              </div>
+            </div>
+            <div class="media d-block feature text-center">
+              <div class="media-body">
+                <h3 class="mt-0">Interpolación</h3>
+                <p class="instructor-meta">Código hecho en clases</p>
+                <a href="https://github.com/Chrisferdynand/numerico-apuntes/blob/master/interpol.c">Ver</a>
               </div>
             </div>
             <div class="media d-block feature text-center">
