--- a/proyecto.html
+++ b/proyecto.html
@@ -324,9 +324,9 @@ El plazo para la entrega es el miércoles 22 de mayo a las 12:00 p.m. <br><br>
 Suerte!.
    </p>
 <div class="center-align"> 
-<a class="waves-effect waves-light btn" href="apuntes/1er-proyecto.pdf"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
+<a class="waves-effect waves-light btn" href="apuntes/2do-proyecto.pdf"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
 <a class="waves-effect waves-light btn" href="registro-img.html"><i class="material-icons left">work</i>Subir Tarea</a>
-<a class="waves-effect waves-light btn" href="video/explicacion"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
+<a class="waves-effect waves-light btn" href="video/explicacion-2"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
         </div> 
     </section>
    <!--Lista de precios-->
