--- a/registro-img.html
+++ b/registro-img.html
@@ -14,8 +14,8 @@
 <body class="register">
    
    <div class="description-2">
-       <h2>1er Proyecto <br> Fis-243</h2>
-       <p class="formulario">Fecha límite 20/04/19 horas 8:00 am</p>
+       <h2>2° Proyecto <br> Fis-243</h2>
+       <p class="formulario">Fecha límite 22/05/19 horas 12:00 pm</p>
     </div>
     <form action="" id="form_subir">
             <div class="form-1-2">
