--- a/proyecto.html
+++ b/proyecto.html
@@ -325,7 +325,7 @@ Suerte!.
    </p>
 <div class="center-align"> 
 <a class="waves-effect waves-light btn" href="tareas/2do-proyecto.pdf"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
-<a class="waves-effect waves-light btn" href="registro-img.html"><i class="material-icons left">work</i>Subir Tarea</a>
+<a class="waves-effect waves-light btn" href="https://fis-243.000webhostapp.com/subir-programa/subir-programa/subir-proyecto.html"><i class="material-icons left">work</i>Subir Tarea</a>
 <a class="waves-effect waves-light btn" href="video/explicacion-2"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
         </div> 
     </section>
