--- a/notas.html
+++ b/notas.html
@@ -66,7 +66,6 @@
     .invitados{
         color: orangered;
         text-transform: uppercase;
-
     }
    
     .section{
@@ -74,7 +73,10 @@
       bottom: 0;
       position: relative;
     }
-   
+        .plagio{
+            background-color: crimson;
+            color: white;
+        }
     
     /*Cuenta regresiva*/
     div.cuenta-regresiva ul li{
@@ -129,7 +131,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-128773448-1');
     </script>
 
@@ -164,17 +165,16 @@
     
     <!--Description-->
     <section class="section container">
-      <h4 class="center">Notas 1er Proyecto</h4>
+      <h4 class="center">Notas 2do Proyecto</h4>
       <p class="center-align"><i class="dots fas fa-ellipsis-h"></i></p>
    
      <table class="centered striped responsive-table">
         <thead>
           <tr>
               <th>Nombre</th>
-              <th>Nombre de archivo por argv</th>
-              <th>Errores en Stderr</th>
-              <th>Lista de Números</th>
-              <th>Matríz</th>
+              <th>Nombre de archivo como argumento(10%)</th>
+              <th>Coeficientes de los polinomios (60%)</th>
+              <th>Evaluación de la función</th>
               <th>Nota</th>
           </tr>
         </thead>
@@ -182,59 +182,50 @@
         <tbody>
           <tr>
             <td>Ana L. Gomez Palo</td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td><i class="half fas fa-star-half"></i></td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td>5%</td>
+            <td colspan="4" class="plagio">¡Plagio!</td>
           </tr>
           <tr>
             <td>Diego H. Vega García</td>
             <td><i class="good fas fa-check"></i></td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="good fas fa-check"></i></td>
-            <td>100%</td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td>10%</td>
           </tr>
           <tr>
-            <td>Erick Bilbao</td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="half fas fa-star-half"></i></td>
-            <td><i class="half fas fa-star-half"></i> 1/4</td>
-            <td>43%</td>
-          </tr>
-           <tr>
-            <td>Fabricio Echalar</td>
-             <td><i class="bad fas fa-times-circle"></i></td>
-             <td><i class="bad fas fa-times-circle"></i></td>
-             <td><i class="half fas fa-star-half"></i></td>
-             <td><i class="good fas fa-check"></i></td>
-            <td>40%</td>
-          </tr>
-           <tr>
-            <td>Mauricio Calderón</td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td>20%</td>
-          </tr>
-          <tr>
-            <td>Franz Vera</td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="good fas fa-check"></i></td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td><i class="bad fas fa-times-circle"></i></td>
-            <td>20%</td>
-          </tr>
-          <tr>
-            <td>Gustavo Vergara</td>
-             <td><i class="bad fas fa-times-circle"></i></td>
+            <td>Daniel Polo</td>
             <td><i class="good fas fa-check"></i></td>
             <td><i class="bad fas fa-times-circle"></i></td>
             <td><i class="bad fas fa-times-circle"></i></td>
             <td>10%</td>
+          </tr>
+           <tr>
+            <td>Gustavo Vergara</td>
+             <td colspan="4" class="plagio">¡Plagio!</td>
+          </tr>
+          <tr>
+            <td>Guadalupe Machicado</td>
+             <td colspan="4" class="plagio">¡Plagio!</td>
+          </tr>
+           <tr>
+            <td>Mauricio Calderón</td>
+            <td><i class="good fas fa-check"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td>10%</td>
+          </tr>
+          <tr>
+            <td>Natalia Farel</td>
+           <td><i class="good fas fa-check"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td>10%</td>
+          </tr>
+          <tr>
+            <td>Franz Vera</td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td><i class="bad fas fa-times-circle"></i></td>
+            <td>0%</td>
           </tr>
         </tbody>
       </table> 
