--- a/proyecto.html
+++ b/proyecto.html
@@ -331,7 +331,7 @@ El plazo para la entrega de su solución es el domingo 9 de junio a las 13:00.<b
 <div class="center-align"> 
 <a class="waves-effect waves-light btn" href="tareas/3er-proyecto.pdf"><i class="material-icons left">picture_as_pdf</i>Ver PDF</a>
 <a class="waves-effect waves-light btn" href="https://fis-243.000webhostapp.com/subir-programa/subir-programa/subir-proyecto.html"><i class="material-icons left">work</i>Subir Tarea</a>
-<a class="waves-effect waves-light btn" href="video/explicacion-2"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
+<a class="waves-effect waves-light btn" href="https://drive.google.com/file/d/1pTUW7jHsZjaV6akyCU05Eb1vl_j25Diw/view"><i class="material-icons left">ondemand_video</i>Ver Vídeo</a>
         </div> 
     </section>
    <!--Lista de precios-->
