--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="notas.html">Notas</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sorteo.html">Sorteo Temas</a>
+              </li>
             </ul>            
           </div>
         </div>
