--- a/notas.html
+++ b/notas.html
@@ -146,6 +146,7 @@
             <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Material<i class="material-icons right">arrow_drop_down</i></a></li>
             <li><a class="nav-link" href="http://iau-noc.org.bo/ask/"> StackOverflow</a></li>
             <li><a href="./proyecto.html"> Proyecto</a></li>
+              <li><a href="./sorteo.html"> Sorteo Temas</a></li>
             
           </ul>
         </div>
@@ -155,6 +156,7 @@
          <li><a class="dropdown-trigger" href="#!" data-target="#dropdown1">Material<i class="material-icons right">arrow_drop_down</i></a></li>
         <li><a class="nav-link" href="http://iau-noc.org.bo/ask/"> StackOverflow</a></li>
         <li><a href="./proyecto.html">Proyecto</a></li>
+          <li><a href="./sorteo.html">Sorteo Temas</a></li>
       </ul>
       <ul id="dropdown1" class="dropdown-content">
           <li><a href="./apuntes.html">Apuntes</a></li>
