--- a/sorteo.html
+++ b/sorteo.html
@@ -166,7 +166,9 @@
     <section class="section container">
       <h4 class="center">Sorteo de Temas</h4>
       <p class="center-align"><i class="dots fas fa-ellipsis-h"></i></p>
-   
+    <span style="color: red">NOTA</span>: Si bien el examen final es una
+exposición sobre el tema que les tocó, las preguntas del tribunal
+pueden referirse a otros temas vistos en la materia.
      <table class="centered striped responsive-table">
         <thead>
           <tr>
@@ -236,7 +238,7 @@
             <td>10</td>
              <td>7083472</td>
             <td>Lino Blacutt</td>
-            <td>7. R</td>
+            <td>7. Raíces reales de una función</td>
           </tr>
           <tr>
             <td>11</td>
