--- a/sorteo.html
+++ b/sorteo.html
@@ -349,6 +349,20 @@ pueden referirse a otros temas vistos en la materia.
           </tr>
         </tbody>
       </table> 
+        <br><br>
+Los temas disponibles eran: <br><br>
+1. Tipos de datos y expresiones en C<br>
+2. Control de flujo en C<br>
+3. Funciones y variables globales en C<br>
+4. Punteros y arreglos en C<br>
+5. Estructuras en C<br>
+6. Entrada y salida en C<br>
+7. Raíces reales de una función<br>
+8. Sistemas de ecuaciones lineales<br>
+9. Interpolación<br>
+10. Mínimos cuadrados<br>
+11. Diferenciación e integración numérica<br>
+12. Ecuaciones diferenciales ordinarias
     </section>
   <!--Footer-->
   <footer class="grey darken-4 page-footer">
