--- a/sorteo.html
+++ b/sorteo.html
@@ -296,7 +296,7 @@ pueden referirse a otros temas vistos en la materia.
 
             <td>Sanchez Perez</td>
 
-            <td>12. Punteros y arreglos en C</td>
+            <td>4. Punteros y arreglos en C</td>
 
           </tr>
 
@@ -306,9 +306,9 @@ pueden referirse a otros temas vistos en la materia.
 
              <td>9971850</td>
 
-            <td>VTumiri Quispe</td>
+            <td>Tumiri Quispe</td>
 
-            <td>8.Control de flujo en C </td>
+            <td>2. Control de flujo en C </td>
 
           </tr>
 
@@ -320,7 +320,7 @@ pueden referirse a otros temas vistos en la materia.
 
             <td>Vega Garcia</td>
 
-            <td>12. Tipos de datos y expresiones en C</td>
+            <td>1. Tipos de datos y expresiones en C</td>
 
           </tr>
 
@@ -332,7 +332,7 @@ pueden referirse a otros temas vistos en la materia.
 
             <td>Vera Rollano</td>
 
-            <td>12. Diferenciacion e integracion numerica</td>
+            <td>11. Diferenciacion e integracion numerica</td>
 
           </tr>
 
@@ -344,7 +344,7 @@ pueden referirse a otros temas vistos en la materia.
 
             <td>Vergara Paco</td>
 
-            <td>8.Raices reales de una funcion</td>
+            <td>7.Raices reales de una funcion</td>
 
           </tr>
         </tbody>
